[package]
name = "stegbrute"
version = "0.1.1"
authors = ["R4yGM <yessou.rayan@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "Steganography brute-force tool"
readme = "README.md"
homepage = "https://github.com/R4yGM/StegBrute"
repository = "https://github.com/R4yGM/StegBrute"
keywords = ["steg","steghide","steganography","brute-force","decrypt"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
